src/frontend/styles/components/command-palette.styl
#command-data
  height: 28px

.ct-p-8
  padding: 8px

.command-view
  background-color: BACKGROUND_COLOR
  font-family: 'SpaceGrotesk'
  color: TEXT_CONTENT_COLOR
  font-size: 14px
  // position: fixed
  // top: 40px
  z-index: 9999
  left: 35vw
  width: 30vw
  right: 35vw
  border-radius: 8px
  outline: 4px solid COMMAND_BORDERS_COLOR

  input
    width: 100% !important
    margin-left: 0px !important
    margin-bottom: 0px !important

    // height: 28px !important
    // width: 30vw !important
    // font-size: 14px !important
    // position: absolute
    // z-index: 21
    // // outline: 2px solid COMMAND_BORDERS_COLOR
    // margin-left: 0 !important
    // border-radius: 6px !important
    background-color: BACKGROUND_COLOR
    // border: 1px solid INPUT_BORDER_COLOR !important
    // background-image: INPUT_DEFAULT_SEARCH_ICON
    // background-size: 14px 14px
    // padding-left: 26px

  //   &:focus
  //     border: 1px solid INPUT_FOCUSED_BORDER_COLOR !important
  //     margin-left: 0 !important

  //   &.disabled
  //     pointer-events: none

  // #command-query-text
  //   background: transparent

  .ct-input-cp-background
    background: #484848 !important
    padding-left: 8px !important

  .agent-command-input
    color: #A5F3FC !important

    &::placeholder
      color: #a5f3fc

    &:focus
      border: 1px solid #0E7490 !important

  #command-results
    width: inherit
    border-radius: 6px
    margin-top: 8px
    background-color: COMMAND_RESULT_BACKGROUND_COLOR

  .command-result
    background-color: COMMAND_RESULT_BACKGROUND_COLOR
    color: TEXT_CONTENT_COLOR
    font-size: 14px
    position: relative
    height: 24px
    width: 100%
    line-height: 24px
    border-radius: 4px
    padding-left: 8px
    overflow: hidden
    cursor: pointer

    &:hover
      background-color: COMMAND_RESULT_HOVERED_BACKGROUND_COLOR

    b
      color: COMMAND_HIGHLIGHTED_RESULT_TEXT_COLOR

  .no-results
    display: none

  .command-even
    // background-color: COMMAND_EVEN_BACKGROUND_COLOR
    // color: COMMAND_ODD_BACKGROUND_COLOR

  .command-odd
    // background-color: COMMAND_ODD_BACKGROUND_COLOR
    // color: COMMAND_EVEN_BACKGROUND_COLOR

  .command-selected
    background-color: COMMAND_RESULT_SELECTED_BACKGROUND_COLOR !important
    color: COMMAND_RESULT_SELECTED_TEXT_COLOR !important

  opacity: 1


.command-non-active
  display: none

#fixed-search
  font-size: 20px
  position: fixed
  left: 40vw
  width: 20vw
  right: 40vw
  top: 20px
  z-index: 5

.fixed-search-non-active
  display: none

.search-results
  font-size: 20px
  background-color: BACKGROUND_COLOR
  color: COLOR
  position: fixed
  bottom: 20px
  max-height: 40vh
  overflow: scroll
  cursor: pointer

  .search-results-location
    width: 50vw
    background-color: #eee

  .search-results-text
    width: 50vw

.search-results-active
  display: block

.search-results-non-active
  display: none

.command-program-search-result-value > div
  font-family: monospace
  display: inline

.command-program-search-result-location
  font-weight: lighter
  font-size: 10px
  float: right
  padding-right: 8px

.command-program-search-result-line
  font-weight: normal

.agent-buttons-container
  display: flex
  justify-content: space-between
  margin-top: 8px
  align-items: center

  .agent-button
    display: flex
    cursor: pointer
    border: 1px solid DEBUG_BUTTON_ACTIVE_BACKGROUND
    padding: 4px
    align-items: center
    border-radius: 6px
    padding-right: 8px
    white-space: nowrap
    height: 28px
    margin-right: 6px

    .add-file-img
      background-image: COMMAND_PALETTE_ADD_FILE_IMG
      background-size: 10px, 16px
      background-position: center
      background-repeat: no-repeat
      width: 24px
      height: 24px
      margin-right: 4px

  .agent-model-select
    width: -webkit-fill-available
    display: flex
    justify-content: space-between
    padding-right: 0px !important

  .agent-model-img
    height: 24px
    min-width: 24px
    background-image: COMMAND_PALETTE_ARROW_IMG
    background-repeat: no-repeat
    background-size: 9px, 6px
    background-position: center

  .agent-enter
    height: 24px
    min-width: 24px
    border-radius: 6px
    background: #0E7490
    background-image: COMMAND_PALETTE_ENTER_MSG_IMG
    background-repeat: no-repeat
    background-size: 14px
    background-position: center
    cursor: pointer

.agent-com
  max-height: 40vh
  overflow-y: auto
  margin-bottom: 8px

.user-img
  height: 24px
  width: 24px
  background-image: COMMAND_PALETTE_USER_IMG
  background-size: 16px, 16px
  background-position: center
  background-repeat: no-repeat

.header-wrapper
  display: flex
  justify-content: space-between

.content-header
  display: flex
  align-items: center

.user-msg
  border-radius: 6px
  background: #3A3A3A
  color: #A5F3FC
  padding: 8px
  margin-bottom: 8px

.user-name
  margin-left: 4px
  margin-right: 4px

.ai-msg
  padding: 8px
  margin-bottom: 8px

.msg-content
  padding: 8px
  display: flex
  flex-direction: column

.ai-img
  height: 24px
  width: 24px
  background-image: COMMAND_PALETTE_AI_IMG
  background-size: 24px, 24px
  background-position: center
  background-repeat: no-repeat

.ai-name
  color: #C7D2FE
  margin-left: 4px
  margin-right: 4px

.command-palette-copy-button
  height: 24px
  width: 24px
  cursor: pointer
  background-image: COMMAND_PALETTE_COPY_IMG
  background-size: 17px, 17px
  background-position: center
  background-repeat: no-repeat

.command-palette-upload-button
  height: 24px
  width: 24px
  cursor: pointer
  background-image: COMMAND_PALETTE_UPLOAD_IMG
  background-size: 17px, 16px
  background-position: center
  background-repeat: no-repeat

.command-palette-redo-button
  height: 24px
  width: 24px
  cursor: pointer
  background-image: COMMAND_PALETTE_REDO_IMG
  background-size: 17px, 15px
  background-position: center
  background-repeat: no-repeat

.command-palette-edit-button
  height: 24px
  width: 24px
  cursor: pointer
  background-image: COMMAND_PALETTE_EDIT_IMG
  background-size: 17px, 17px
  background-position: center
  background-repeat: no-repeat

.msg-controls
  display: flex

